# cpp_redis

./: .appveyor.yml  .bazelrc  .clang-format  .doxygen  .gitignore  .gitignore.bak  .gitmodules  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  WORKSPACE  clang_format.sh  cpp_redis.pc.in  install_deps.sh
docs/html/: annotated.html  array__builder_8hpp.html  array__builder_8hpp_source.html  builder__iface_8hpp.html  builder__iface_8hpp_source.html  builders__factory_8hpp.html  builders__factory_8hpp_source.html  bulk__string__builder_8hpp.html  bulk__string__builder_8hpp_source.html  classcpp__redis_1_1builders_1_1array__builder-members.html  classcpp__redis_1_1builders_1_1array__builder.html  classcpp__redis_1_1builders_1_1builder__iface-members.html  classcpp__redis_1_1builders_1_1builder__iface.html  classcpp__redis_1_1builders_1_1bulk__string__builder-members.html  classcpp__redis_1_1builders_1_1bulk__string__builder.html  classcpp__redis_1_1builders_1_1error__builder-members.html  classcpp__redis_1_1builders_1_1error__builder.html  classcpp__redis_1_1builders_1_1integer__builder-members.html  classcpp__redis_1_1builders_1_1integer__builder.html  classcpp__redis_1_1builders_1_1reply__builder-members.html  classcpp__redis_1_1builders_1_1reply__builder.html  classcpp__redis_1_1builders_1_1simple__string__builder-members.html  classcpp__redis_1_1builders_1_1simple__string__builder.html  classcpp__redis_1_1client-members.html  classcpp__redis_1_1client.html  classcpp__redis_1_1logger-members.html  classcpp__redis_1_1logger.html  classcpp__redis_1_1logger__iface-members.html  classcpp__redis_1_1logger__iface.html  classcpp__redis_1_1network_1_1redis__connection-members.html  classcpp__redis_1_1network_1_1redis__connection.html  classcpp__redis_1_1network_1_1tcp__client-members.html  classcpp__redis_1_1network_1_1tcp__client.html  classcpp__redis_1_1network_1_1tcp__client__iface-members.html  classcpp__redis_1_1network_1_1tcp__client__iface.html  classcpp__redis_1_1redis__error-members.html  classcpp__redis_1_1redis__error.html  classcpp__redis_1_1reply-members.html  classcpp__redis_1_1reply.html  classcpp__redis_1_1sentinel-members.html  (+139 more)
docs/latex/: annotated.tex  array__builder_8hpp.tex  builder__iface_8hpp.tex  builders__factory_8hpp.tex  bulk__string__builder_8hpp.tex  classcpp__redis_1_1builders_1_1array__builder.eps  classcpp__redis_1_1builders_1_1array__builder.tex  classcpp__redis_1_1builders_1_1builder__iface.eps  classcpp__redis_1_1builders_1_1builder__iface.tex  classcpp__redis_1_1builders_1_1bulk__string__builder.eps  classcpp__redis_1_1builders_1_1bulk__string__builder.tex  classcpp__redis_1_1builders_1_1error__builder.eps  classcpp__redis_1_1builders_1_1error__builder.tex  classcpp__redis_1_1builders_1_1integer__builder.eps  classcpp__redis_1_1builders_1_1integer__builder.tex  classcpp__redis_1_1builders_1_1reply__builder.tex  classcpp__redis_1_1builders_1_1simple__string__builder.eps  classcpp__redis_1_1builders_1_1simple__string__builder.tex  classcpp__redis_1_1client.tex  classcpp__redis_1_1logger.eps  classcpp__redis_1_1logger.tex  classcpp__redis_1_1logger__iface.eps  classcpp__redis_1_1logger__iface.tex  classcpp__redis_1_1network_1_1redis__connection.tex  classcpp__redis_1_1network_1_1tcp__client.eps  classcpp__redis_1_1network_1_1tcp__client.tex  classcpp__redis_1_1network_1_1tcp__client__iface.eps  classcpp__redis_1_1network_1_1tcp__client__iface.tex  classcpp__redis_1_1redis__error.eps  classcpp__redis_1_1redis__error.tex  classcpp__redis_1_1reply.tex  classcpp__redis_1_1sentinel.tex  classcpp__redis_1_1sentinel_1_1sentinel__def.tex  classcpp__redis_1_1subscriber.tex  client_8hpp.tex  client_8ipp.tex  dir_09e761304027c904456130627fd4dcf5.tex  dir_352251206f2e216e88810b5fb29f51c8.tex  dir_385d11d1b9f28fad9d9928b9e15978bd.tex  dir_4a9a619cb35b7ba799bd8912e91a56ec.tex  (+39 more)
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  cpp_redis_client.cpp  cpp_redis_consumer.cpp  cpp_redis_future_client.cpp  cpp_redis_high_availability_client.cpp  cpp_redis_kill.cpp  cpp_redis_logger.cpp  cpp_redis_streams_client.cpp  cpp_redis_subscriber.cpp  future_client.cpp  kill_client.cpp  logger.cpp  redis_client.cpp  redis_subscriber.cpp  sync_client.cpp  winsock_initializer.h
html/: index.html  jquery.js  md_CHANGELOG.html  md_CONTRIBUTING.html  md_README.html  menu.js  pages.html
html/search/: all_0.html  all_0.js  all_1.html  pages_0.html  pages_1.html  pages_1.js  search.js  searchdata.js
includes/cpp_redis/: client.hpp  cpp_redis  cpp_redis.hpp  future_client.hpp  ha_client.hpp  ha_redis_client.hpp  ha_redis_subscriber.hpp  ha_subscriber.hpp  logger.hpp  redis_client.hpp  redis_error.hpp  redis_subscriber.hpp  reply.hpp  sentinel.hpp  subscriber.hpp  sync_client.hpp
latex/: doxygen.sty  md_CHANGELOG.tex  md_CONTRIBUTING.tex  md_README.tex  refman.tex
msvc15/: cpp_redis.sln  cpp_redis.vcxproj  cpp_redis.vcxproj.filters
rts-redis-test/: rts-redis-test.cpp
sources/: client.cpp  future_client.cpp  ha_client.cpp  ha_redis_client.cpp  ha_redis_subscriber.cpp  ha_subscriber.cpp  logger.cpp  redis_client.cpp  redis_subscriber.cpp  reply.cpp  sentinel.cpp  subscriber.cpp  sync_client.cpp
sources/builders/: array_builder.cpp  builders_factory.cpp  bulk_string_builder.cpp  error_builder.cpp  integer_builder.cpp  reply_builder.cpp  simple_string_builder.cpp
sources/core/: client.cpp  consumer.cpp  dispatch_queue.cpp  ha_subscriber.cpp  reply.cpp  sentinel.cpp  subscriber.cpp  types.cpp
tests/: CMakeLists.txt
tests/sources/: main.cpp
tests/sources/builders/: array_builder.cpp  bulk_string_builder.cpp  error_builder.cpp  integer_builder.cpp  reply_builder.cpp  simple_string_builder.cpp
tests/sources/spec/: redis_client_spec.cpp  redis_subscriber_spec.cpp  reply_spec.cpp
tests/sources/spec/builders/: array_builder_spec.cpp  builders_factory_spec.cpp  bulk_string_builder_spec.cpp  error_builder_spec.cpp  integer_builder_spec.cpp  reply_builder_spec.cpp  simple_string_builder_spec.cpp
(+264 files in other folders)
